# topoVM

./: .gitignore  create_snap.py  read_gsd.py
VM_conti/: CMakeLists.txt  comn.cpp  comn.h  io2D.h  main_conti.cpp  vm_knn.cpp  vm_knn.h  vm_voro_2.cpp  vm_voro_2.h
VM_kNN/: CMakeLists.txt  comn.h  gsd.h  io2D.cpp  io2D.h  main.cpp  particle.h  vm_knn.h  vm_knn_symm.h
VM_kNN/test/: CMakeLists.txt  knn.cpp
VM_voro/: CMakeLists.txt  config.h  create_snap.py  gsd.c  main.cpp  main_binary.cpp  main_conti.cpp  main_discret.cpp  particle.cpp  particle.h  vm_voro.h
script/: Fig1.py  Fig2.py  Fig3.py  Fig4.py  Fig5.py  band_profile.py  coarse_grain.py  hydro_linear_instab.py  kinetic_linear_instab.py  linear_instability.ipynb  linear_instability_binary.ipynb  order_para.py  phi_G_rho_vs_eta.py  sim_PD.py  spatial_distrib.py
script/Tang_2025_PRR/: Fig1.py  Fig2.py  Fig3.py  Fig4.py  Fig5.py  GNF.py  add_line.py  coarse_grain.py  kinetic_linear_instab.py  linear_instability.ipynb  linear_instability_binary.ipynb  order_para.py  spatial_distrib.py
script/Tang_2025_PRR/data/GNF/: L1000_d0.03_e0.30_r1_dx4.npz  L2000_d0.03_e0.30_r1_dx2.npz  L2000_d0.03_e0.30_r1_dx4.npz
script/Tang_2025_PRR/data/coarse_grain_dx40/: L2000_2000_d0.0000_e0.450_r1_s3100.npz  L2000_2000_d0.0300_e0.100_r1_s3100.npz  L2000_2000_d0.0300_e0.300_r1_s3100.npz  L2000_2000_d0.0300_e0.420_r1_s3100.npz
script/Tang_2025_PRR/data/hydros/: r1_q0.0010_n200_nt30.npz  r1_q0.0010_n50_nt30.npz
script/Tang_2025_PRR/data/kinetic/: r01_q0.0010_K100_n200_nt60.npz  r01_q0.0010_K10_n200_nt60.npz  r01_q0.0010_K1_n200_nt60.npz  r01_q0.0010_K20_n200_nt60.npz  r01_q0.0010_K2_n200_nt60.npz  rB0.03_q0.0010_K100_n200_nt60.npz
script/Tang_2025_PRR/data/order_para/: L200_rhoB0.03_dx40.npz  L200_rhoB0.05_dx40.npz  L400_rhoB0.03_dx40.npz  L400_rhoB0_dx40.npz
script/Tang_2025_PRR/data/time_ave_profile/: L400_400_rB0.0300_e0.1_r1.npz  L400_400_rB0.0500_e0.1_r1.npz  L400_400_rB0.1000_e0.1_r1.npz  L400_400_rB0.3000_e0.1_r1.npz  L400_400_rB0.3000_e0.20_r1.npz  L400_400_rB0.3000_e0.30_r1.npz  L800_800_rB0.1_e0.3_r1.00.npz  L800_800_rB0.1_e0.3_r1.60.npz  L800_800_rB0.1_e0.3_r1.80.npz
script/data/: r1_qx0.0010_K100_n200.npz  r1_qx0.0010_K20_n200.npz  r1_qx0.0010_K50_n200.npz  rB0.03_qx0.0010_K100_n200.npz  rB0.03_qx0.0010_K100_n50.npz  rB0.03_qx0.0010_K20_n200.npz  rB0.03_qx0.0010_K20_n50.npz  rB0.03_qx0.0010_K50_n200.npz  rB0.03_qx0.0010_K50_n50.npz
script/data/GNF/: L2000_d0.00_e0.44_r1_dx2.npz  L2000_d0.00_e0.45_r1_dx2.npz
script/data/hydros/: r1_q0.0010_n200_nt60.npz  r1_q0.0010_n400_nt60.npz  r1_q0.0010_n400_nt60_N2.npz  rB0.03_q0.0010_n200_nt60.npz  rB0.03_q0.0010_n400_nt60.npz
script/data/kinetic/: r01_q0.0010_K20_n50_nt30.npz  r01_q0.0010_K20_n50_nt60.npz  r01_q0.0010_K4_n200_nt60.npz  r01_q0.0010_K50_n200_nt60.npz  rB0.03_q0.0010_K100_n2_nt60.npz  rB0.03_q0.0010_K20_n50_nt30.npz  rB0.03_q0.0010_K2_n100_nt60.npz  rB0.03_q0.0010_K2_n200_nt60.npz
script/data/order_para/: L1600_rhoB0.03_dx40.npz  L2000_rhoB0.03_eta0.3.npz  L200_rhoB0.03_dx25.npz  L200_rhoB0.05_dx25.npz  L200_rhoB0.1_dx25.npz  L200_rhoB0.1_dx40.npz  L200_rhoB0_dx25.npz  L200_rhoB0_dx40.npz  L400_rhoB0.03_dx25.npz  L400_rhoB0.05_dx25.npz  L400_rhoB0.05_dx40.npz  L400_rhoB0.1_dx25.npz  L400_rhoB0.1_dx40.npz  L400_rhoB0_dx25.npz  L800_rhoB0.03_dx25.npz  L800_rhoB0.03_dx40.npz  L800_rhoB0.1_dx40.npz  L800_rhoB0_dx40.npz
script/data/profile/: L800_800_d0.1000_e0.300_r1_s2002.npz  L800_800_d0.1000_e0.300_r1_s2004.npz  L800_800_d0.1000_e0.300_r1_s2011.npz
script/data/time_ave_profile/: L400_400_rB0.0200_e0.1_r1.npz  L400_400_rB0.2000_e0.1_r1.npz  L400_400_rB0.3000_e0.10_r1.npz  L800_800_rB0.1_e0.3_r1.20.npz  L800_800_rB0.1_e0.3_r1.40.npz
